--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
                     <label for="drop" class="toggle">Menu</label>
                     <input type="checkbox" id="drop">
 						<ul class="menu">
-							<!-- <li class="active"><a href="index.html">Home</a></li> -->
-							<li class="mt-sm-3"><a href="#about" class="scroll">Home</a></li>
-							<li class="mt-sm-3"><a href="#gallery" class="scroll">About Me</a></li>
-							<li class="mt-sm-3"><a href="#services" class="scroll">Experiences</a></li>
-							<li class="mt-sm-3"><a href="#news" class="scroll">Publications</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
+							<!-- <li class="mt-sm-3"><a href="#about" class="scroll">Home</a></li> -->
+							<!-- <li class="mt-sm-3"><a href="#about" class="scroll">About Me</a></li> -->
+                            <li class="mt-sm-3"><a href="#publications" class="scroll">Publications</a></li>
+							<li class="mt-sm-3"><a href="#experiences" class="scroll">Working Experience</a></li>
                             <li class="mt-sm-3"><a href="#contact" class="scroll">Contact</a></li>
                             <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=Oo7tAykrRonxbtYv3k0bfowOYJxSMsWt2OG6CF2wIDY"></script>
-                            <!-- <li class="mt-sm-3"><a href="#contact" class="scroll">Contact</a></li> -->
                         </ul>
 				</nav>
 			</div>
@@ -64,16 +63,81 @@
 		 <!-- Interests -->
     <section class="gallery" id="gallery">
         <h3 class="w3_head mb-5">Hi!</h3>
-        <p class="banp mt-5">I am a third year Ph.D. candidate in the Department of Computer Science, City University of Hong Kong, Hong Kong.
+        <p class="banp mt-5"> Welcome to my page.
+            <br>I am a third-year Ph.D. candidate in the Department of Computer Science, City University of Hong Kong, Hong Kong.
             <br>I received the B.Sc. degree in mathematics from Keele University, UK, and the M.Sc. degree in computer science from The University of Birmingham, UK.
             <br>My current research interests include neurodynamic optimization, machine learning, and computational intelligence. 
         </p>
     </section>
 
-<!-- services -->
-	<section class="slide-wrapper" id="services">
+<!-- publications -->
+	<section class="slide-wrapper" id="publications">
         <div class="services">
-    		<h3 class="w3_head mb-5">Experiences</h3>
+    		<div class="text-left">
+            <h3 class="w3_head mb-5">Publications</h3>
+        </div>
+        <!-- //Journals -->
+        <div class="text-left">
+            <h4 class="w3_head mb-3">Journals</h4>
+        </div>
+        <div class="service-content">
+            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9399692">Hash Bit Selection via Collaborative Neurodynamic Optimization With Discrete Hopfield Networks</a>
+                <span style="float:right;"> 2021</span>
+            </h4>
+            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
+            </p>
+            <p>
+                IEEE Transactions on Neural Networks and Learning Systems   
+            </p>
+            <br>
+        </div>
+
+        <div class="service-content">
+            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9142623">A Discrete-Time Neurodynamic Approach to Sparsity-Constrained Nonnegative Matrix Factorization</a>
+                <span style="float:right;"> 2020</span>
+            </h4>
+            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
+            </p>
+            <p>
+                Neural Computation 32 (8), 1531-1562
+            </p>
+            <br>
+        </div>
+        <!-- //Conferences -->
+        <div class="text-left">
+            <h4 class="w3_head mb-3">Conferences</h4>
+        </div>
+        <div class="service-content">
+            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9202136">Alternative Mutation Operators in Collaborative Neurodynamic Optimization</a>
+                <span style="float:right;"> 2020</span>
+            </h4>
+            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
+            </p>
+            <p>
+                IEEE 10th International Conference on Information Science and Technology (ICIST)
+            </p>
+            <br>
+        </div>
+
+        <div class="service-content">
+            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9177819">Sparse Nonnegative Matrix Factorization Based on a Hyperbolic Tangent Approximation of L0-Norm and Neurodynamic Optimization</a>
+                <span style="float:right;"> 2020</span>
+            </h4>
+            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
+            </p>
+            <p>
+                IEEE 12th International Conference on Advanced Computational Intelligence (ICACI)
+            </p>
+            <br>
+        </div>
+        </div>
+        <!-- .Services ends here -->
+    </section>
+	<!-- //publication -->
+
+	<!-- experiences -->
+    <div class="news" id="experiences">
+        <h3 class="w3_head mb-5">Experiences</h3>
             <div class="service-content">
                 <h4 style="text-align:left;">Huawei Tech. Investment Co. Ltd.
                     <span style="float:right;"> Hong Kong, China</span>
@@ -132,70 +196,10 @@
                     Development of algorithms for automatic product categorization.
                 </p>
             </div>
-        </div>
-        <!-- .Services ends here -->
-    </section>
-	<!-- //services -->
 
-	<!-- news -->
-    <div class="news" id="news">
-		<div class="text-left">
-			<h3 class="w3_head mb-5">Publications</h3>
-		</div>
-        <!-- //Journals -->
-        <div class="text-left">
-            <h4 class="w3_head mb-3">Journals</h4>
-        </div>
-        <div class="service-content">
-            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9399692">Hash Bit Selection via Collaborative Neurodynamic Optimization With Discrete Hopfield Networks</a>
-                <span style="float:right;"> 2021</span>
-            </h4>
-            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
-            </p>
-            <p>
-                IEEE Transactions on Neural Networks and Learning Systems   
-            </p>
-            <br>
-        </div>
 
-        <div class="service-content">
-            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9142623">A Discrete-Time Neurodynamic Approach to Sparsity-Constrained Nonnegative Matrix Factorization</a>
-                <span style="float:right;"> 2020</span>
-            </h4>
-            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
-            </p>
-            <p>
-                Neural Computation 32 (8), 1531-1562
-            </p>
-            <br>
-        </div>
-        <!-- //Conferences -->
-        <div class="text-left">
-            <h4 class="w3_head mb-3">Conferences</h4>
-        </div>
-        <div class="service-content">
-            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9202136">Alternative Mutation Operators in Collaborative Neurodynamic Optimization</a>
-                <span style="float:right;"> 2020</span>
-            </h4>
-            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
-            </p>
-            <p>
-                IEEE 10th International Conference on Information Science and Technology (ICIST)
-            </p>
-            <br>
-        </div>
 
-        <div class="service-content">
-            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9177819">Sparse Nonnegative Matrix Factorization Based on a Hyperbolic Tangent Approximation of L0-Norm and Neurodynamic Optimization</a>
-                <span style="float:right;"> 2020</span>
-            </h4>
-            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
-            </p>
-            <p>
-                IEEE 12th International Conference on Advanced Computational Intelligence (ICACI)
-            </p>
-            <br>
-        </div>
+		
 	</div>
 <!-- //news -->
 
