--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     <section class="gallery" id="gallery">
         <h3 class="w3_head mb-5">Hi!</h3>
         <p class="banp mt-5"> Welcome to my page.
-            <br>I am a third-year Ph.D. candidate in the Department of Computer Science, City University of Hong Kong, Hong Kong.
-            <br>I received the B.Sc. degree in mathematics from Keele University, UK, and the M.Sc. degree in computer science from The University of Birmingham, UK.
-            <br>My current research interests include neurodynamic optimization, machine learning, and computational intelligence. 
+            <br>I am currently working as a postdoctoral research fellow in COLA lab at Exeter University.
+            <br>I received the B.Sc. degree in mathematics with finance from Keele University, Keele, U.K., in 2016, the M.Sc. degree in computer science from The University of Birmingham, Birmingham, U.K., in 2017, and the Ph.D. degree from the Department of Computer Science, City University of Hong Kong, Hong Kong, in 2021.
+            <br>My current research interests include neural networks, machine learning, and computational intelligence. 
         </p>
     </section>
 
@@ -79,6 +79,17 @@
         <!-- //Journals -->
         <div class="text-left">
             <h4 class="w3_head mb-3">Journals</h4>
+        </div>
+         <div class="service-content">
+            <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9519839">Hash Bit Selection Based on Collaborative Neurodynamic Optimization</a>
+                <span style="float:right;"> 2021</span>
+            </h4>
+            <p style="text-align:left;"><b>X Li</b>, J Wang, S Kwong
+            </p>
+            <p>
+                IEEE Transactions on Cybernetics   
+            </p>
+            <br>
         </div>
         <div class="service-content">
             <h4 style="text-align:left;"><a href="https://ieeexplore.ieee.org/abstract/document/9399692">Hash Bit Selection via Collaborative Neurodynamic Optimization With Discrete Hopfield Networks</a>
@@ -211,7 +222,7 @@
 <!--             <p><a href="https://clustrmaps.com/site/1bibv"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=Oo7tAykrRonxbtYv3k0bfowOYJxSMsWt2OG6CF2wIDY&cl=ffffff" /></a></p> -->
             <h3 class="w3_head mb-5"> </h3>
             <div class="news_top">
-                <p class="newsp">Last Updated: June 7, 2021 </p>
+                <p class="newsp">Last Updated: August 27, 2021 </p>
             </div>
 	</section>
 	 <!-- //contact -->
