--- a/index.html
+++ b/index.html
@@ -150,6 +150,18 @@
     <div class="news" id="experiences">
         <h3 class="w3_head mb-5">Experiences</h3>
             <div class="service-content">
+                <h4 style="text-align:left;">University of Exeter
+                    <span style="float:right;"> Exeter, UK</span>
+                </h4>
+                <p style="text-align:left;">Research Fellow at COLA Lab
+                    <span style="float:right;"> 2021/08 - present</span>
+                </p>
+                <p>
+                    Designed and developed algorithms to optimize the Massive MIMO problem.
+                </p>
+                <br>
+            </div>
+            <div class="service-content">
                 <h4 style="text-align:left;">Huawei Tech. Investment Co. Ltd.
                     <span style="float:right;"> Hong Kong, China</span>
                 </h4>
